# ChangeLog for dev-perl/Text-Iconv
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-Iconv/ChangeLog,v 1.29 2007/12/17 18:48:12 drac Exp $

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Text-Iconv-1.7.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> Text-Iconv-1.7.ebuild:
  alpha/ia64/sparc/x86 stable

*Text-Iconv-1.7 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +Text-Iconv-1.7.ebuild:
  Version bump

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Text-Iconv-1.4.ebuild:
  Ebuild maintenance

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> Text-Iconv-1.4.ebuild:
  Marked stable on mips.

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Text-Iconv-1.4.ebuild:
  Adding perl dep; fixed DEPEND

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> Text-Iconv-1.4.ebuild:
  Add ~x86-fbsd keyword.

  08 Apr 2006; <mcummings@gentoo.org> Text-Iconv-1.4.ebuild:
  Keywording ~mips, tested on raq2

  13 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> Text-Iconv-1.4.ebuild:
  Stable on hppa

  06 May 2005; Michael Hanselmann <hansmi@gentoo.org> Text-Iconv-1.4.ebuild:
  Added to ~hppa.

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  -Text-Iconv-1.2.ebuild, -Text-Iconv-1.2-r1.ebuild, Text-Iconv-1.4.ebuild:
  Cleaning for mirror

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  14 Dec 2004; Markus Rothe <corsair@gentoo.org> Text-Iconv-1.4.ebuild:
  Stable on ppc64

  01 Nov 2004; Markus Rothe <corsair@gentoo.org> Text-Iconv-1.4.ebuild:
  Marked ~ppc64. bug #66216

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org> Text-Iconv-1.4.ebuild:
  Stable on amd64.

  19 Aug 2004; Gustavo Zacarias <gustavoz@gentoo.org> Text-Iconv-1.4.ebuild:
  Stable on sparc

  17 Aug 2004; Aron Griffis <agriffis@gentoo.org> Text-Iconv-1.4.ebuild:
  stable on alpha, ia64 and x86

*Text-Iconv-1.4 (30 Jul 2004)